--- a/Dashboard/Areas/PlayerScoreEntity/Views/PlayerGameWeak/Index.cshtml
+++ b/Dashboard/Areas/PlayerScoreEntity/Views/PlayerGameWeak/Index.cshtml
@@ -259,7 +259,8 @@ else
                                 } 
                             },
                             { data: "id" },
-                        ]
+                        ],
+                        scrollX: true
                     });
                     $("button[type=reset]").on("click", function () {
                         $(".dt-date").each(function () {
