--- a/Dashboard/Areas/TeamEntity/Views/Player/Index.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Player/Index.cshtml
@@ -376,7 +376,8 @@ else
                         { data: "createdAt" },
                         { data: "id" },
                     ],
-                    'order': [[1, 'asc']]
+                    'order': [[1, 'asc']],
+                    scrollX: true
                 });
                 $("button[type=reset]").on("click", function () {
                     $(".dt-date").each(function () {
