--- a/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Profile.cshtml
+++ b/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Profile.cshtml
@@ -120,6 +120,7 @@
                                                     <th>@Html.DisplayNameFor(model => accountTeamGameWeak.FavouriteTeamRanking)</th>
                                                     <th>@Html.DisplayNameFor(model => accountTeamGameWeak.DoubleGameWeak)</th>
                                                     <th>@Html.DisplayNameFor(model => accountTeamGameWeak.TripleCaptain)</th>
+                                                    <th>@Html.DisplayNameFor(model => accountTeamGameWeak.TwiceCaptain)</th>
                                                     <th>@Html.DisplayNameFor(model => accountTeamGameWeak.Top_11)</th>
                                                     <th>@Html.DisplayNameFor(model => accountTeamGameWeak.TansfarePoints)</th>
                                                 </tr>
@@ -140,6 +141,7 @@
                                                         <td>@item.FavouriteTeamRanking</td>
                                                         <td>@item.DoubleGameWeak</td>
                                                         <td>@item.TripleCaptain</td>
+                                                        <td>@item.TwiceCaptain</td>
                                                         <td>@item.Top_11</td>
                                                         <td>@item.TansfarePoints</td>
                                                     </tr>
